--- a/cas_springboot/pom.xml
+++ b/cas_springboot/pom.xml
@@ -22,16 +22,10 @@
 
     <dependencies>
 
-        <!-- SpringBoot -->
+        <!-- Java EE -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
