--- a/cas_springboot/src/main/resources/application.properties
+++ b/cas_springboot/src/main/resources/application.properties
@@ -8,16 +8,13 @@ server.port=8000
 spring.mvc.view.prefix=classpath:/templates
 spring.mvc.view.suffix=.ftl
 
-# \u6570\u636E\u5E93\u914D\u7F6E
+# \u6570\u636E\u5E93
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/untitled?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=2468
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-# \u65E5\u5FD7
-logging.level.com=debug
-
-# CAS\u914D\u7F6E
+# CAS
 cas.server-url-prefix=http://cas.test.com
 cas.server-login-url=http://cas.test.com/login
 cas.client-host-url=http://127.0.0.1:8000
