--- a/shiro_springboot/src/main/resources/application.properties
+++ b/shiro_springboot/src/main/resources/application.properties
@@ -4,17 +4,11 @@
 server.port=80
 
 # \u6A21\u677F\u5F15\u64CE\uFF08Maven\u591AModule\u9879\u76EE\u4E2D\uFF0C\u5C06templates\u653E\u5728webapp\u4E0B\u4F1A\u62A5\u9519\uFF09
-spring.thymeleaf.prefix=classpath:/templates
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
+spring.mvc.view.prefix=classpath:/templates
+spring.mvc.view.suffix=.ftl
 
 # \u6570\u636E\u5E93
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/untitled?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=2468
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-# \u65E5\u5FD7\uFF08\u9ED8\u8BA4Logback\uFF09
-#logging.level.root=info
-logging.level.com=debug
