--- a/jwt_shiro/src/main/resources/application.properties
+++ b/jwt_shiro/src/main/resources/application.properties
@@ -7,6 +7,10 @@ server.port=80
 spring.mvc.view.prefix=classpath:/templates
 spring.mvc.view.suffix=.ftl
 
+# swagger2
+swagger.enabled=true
+swagger.base-path=/**
+
 # \u6570\u636E\u5E93
 spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/untitled?useSSL=false
 spring.datasource.druid.username=root
