--- a/jwt_dynamic/pom.xml
+++ b/jwt_dynamic/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <!-- 权限 -->
         <dependency>
