--- a/jwt_dynamic/src/main/resources/application.properties
+++ b/jwt_dynamic/src/main/resources/application.properties
@@ -20,3 +20,21 @@ spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 # Druid\u76D1\u63A7
 spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+
+# \u542F\u7528Redis
+redis.open=false
+
+# Redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+# \u6CE8\u610F\u8D85\u65F6\u65F6\u95F4\u4E0D\u80FD\u8BBE\u4E3A0
+spring.redis.timeout=100
+
+# \u7F13\u5B58\uFF08\u9700\u8981\u624B\u52A8\u6307\u5B9A\uFF0C\u5426\u5219\u4F1A\u56E0\u4E3A\u5F15\u5165\u4E86Redis\u4F1A\u53D8\u6210RedisCache\uFF09
+spring.cache.type=SIMPLE
