--- a/shiro_rbac/pom.xml
+++ b/shiro_rbac/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com</groupId>
     <artifactId>shiro_rbac</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,7 +39,6 @@
     </dependencies>
 
     <build>
-        <finalName>shiro_rbac</finalName>
     </build>
 
 </project>
