--- a/shiro_ini/pom.xml
+++ b/shiro_ini/pom.xml
@@ -22,6 +22,13 @@
             <version>1.2.4</version>
         </dependency>
 
+        <!-- 工具 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
