--- a/shiro_springboot/src/main/resources/application.properties
+++ b/shiro_springboot/src/main/resources/application.properties
@@ -12,7 +12,7 @@ swagger.enabled=true
 swagger.base-path=/**
 
 # \u6570\u636E\u5E93
-spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/untitled?useSSL=false
+spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/untitled?useSSL=false&characterEncoding=utf-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=2468
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
