--- a/jwt_dynamic/pom.xml
+++ b/jwt_dynamic/pom.xml
@@ -71,6 +71,16 @@
 
         <!-- 工具 -->
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.6.8</version>
+        </dependency>
+        <dependency>
+            <groupId>util</groupId>
+            <artifactId>java_util</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
