--- a/jwt_shiro/pom.xml
+++ b/jwt_shiro/pom.xml
@@ -67,6 +67,11 @@
 
         <!-- 工具 -->
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.6.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
