--- a/jwt_dynamic/src/main/resources/application.properties
+++ b/jwt_dynamic/src/main/resources/application.properties
@@ -21,6 +21,9 @@ spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 
+# MBP
+mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
+
 # \u542F\u7528Redis
 redis.open=false
 
