--- a/jwt_dynamic/pom.xml
+++ b/jwt_dynamic/pom.xml
@@ -77,7 +77,7 @@
         </dependency>
         <dependency>
             <groupId>util</groupId>
-            <artifactId>java_util</artifactId>
+            <artifactId>java-util</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
