--- a/shiro_springboot/pom.xml
+++ b/shiro_springboot/pom.xml
@@ -67,6 +67,11 @@
             <version>4.6.8</version>
         </dependency>
         <dependency>
+            <groupId>util</groupId>
+            <artifactId>java-util</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
